--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,7 @@
 ---
+import '@styles/global.css';
+import Navigation from '@components/Navigation.astro';
+
 const pageTitle = 'About Me';
 
 const identity = {
@@ -38,9 +41,7 @@ const textCase = 'uppercase';
     <title>{pageTitle}</title>
   </head>
   <body>
-    <a href="/">Home</a>
-    <a href="/about">About</a>
-    <a href="/blog">blog</a>
+    <Navigation />
     <h1>{pageTitle}</h1>
 
     <style define:vars={{ skillColor, fontWeight, textCase }}>
