--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,3 +1,5 @@
-<a href="/">Home</a>
-<a href="/about">About</a>
-<a href="/blog">blog</a>
+<div class="nav-links">
+  <a href="/">Home</a>
+  <a href="/about">About</a>
+  <a href="/blog">blog</a>
+</div>
