--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import '@styles/global.css';
-import Navigation from '@components/Navigation.astro';
 import Footer from '@components/Footer.astro';
+import Header from '@components/Header.astro';
 
 const pageTitle = 'About Me';
 
@@ -42,7 +42,7 @@ const textCase = 'uppercase';
     <title>{pageTitle}</title>
   </head>
   <body>
-    <Navigation />
+    <Header />
     <h1>{pageTitle}</h1>
 
     <style define:vars={{ skillColor, fontWeight, textCase }}>
