--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,4 +1,5 @@
 ---
+import TagList from '@components/TagList.astro';
 import BaseLayout from '@layouts/BaseLayout.astro';
 const { frontmatter } = Astro.props;
 ---
@@ -8,5 +9,6 @@ const { frontmatter } = Astro.props;
   <p><em>{frontmatter.description}</em></p>
   <p>Written by: {frontmatter.author}</p>
   <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+  <TagList passedTags={frontmatter.tags} />
   <slot />
 </BaseLayout>
