--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -5,12 +5,14 @@ import BaseLayout from '@layouts/BaseLayout.astro';
 export async function getStaticPaths() {
   const allPosts = await Astro.glob('../posts/*.md');
 
-  const uniqueTags = [
-    ...new Set(allPosts.map((post) => post.frontmatter.tags).flat()),
+  const uniqueTags: string[] = [
+    ...new Set(
+      allPosts.map((post: Record<string, any>) => post.frontmatter.tags).flat()
+    ),
   ];
 
-  return uniqueTags.map((tag) => {
-    const filteredPosts = allPosts.filter((post) =>
+  return uniqueTags.map((tag: string) => {
+    const filteredPosts: Record<string, any>[] = allPosts.filter((post) =>
       post.frontmatter.tags.includes(tag)
     );
     return {
