--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,16 @@
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
+.dark .skill {
+  color: #fff !important;
+}
+
 html {
   background-color: #f1f5f9;
   font-family: sans-serif;
